avoid "early" ripoff overlap previous scheduling

--- a/app/assets/stylesheets/calendar/_scheduling.css.sass
+++ b/app/assets/stylesheets/calendar/_scheduling.css.sass
@@ -77,7 +77,7 @@
     border-bottom: none
     border-bottom-left-radius: 0
     border-bottom-right-radius: 0
-    margin-bottom: -2px
+    margin-bottom: 2px
 
     .gimmicks
       padding-bottom: 5px
@@ -92,8 +92,9 @@
     background-repeat: repeat-x
 
   &.early:before
-    top: -10px
-    height: 15px
+    top: -3px
+    height: 10px
+    background-position: 0 -9px
 
   &.late:before
     bottom: 0
